// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Account /> should render correctly - index 1`] = `
<div>
  <div
    aria-label="Loading"
    class="sc-bcXHqe kEjsPc page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="sc-idXgbr irOVYZ"
    >
      <div
        class="sc-dIfARi hEqwgc"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-idXgbr jnOdul"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-dIfARi hEqwgc"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-idXgbr jnOdul"
    >
      <div
        class="sc-dIfARi hEqwgc"
        style="margin-left: -0px;"
      />
    </div>
  </div>
</div>
`;

exports[`<Account /> should render correctly with initial state 1`] = `
<div>
  <div
    class="sc-bcXHqe dKDSeC page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="sc-ksBlkl iCvzgk"
    >
      <h1
        class="sc-gswNZR fEnHfq sc-kDvujY jlGjEY"
      >
        Account
      </h1>
    </div>
    <div
      class="accountstyles__ControlPanel-sc-b7dzct-2 bqtbAJ"
    >
      <button
        class="sc-kgTSHT kguxuY accountstyles__StyledButton-sc-b7dzct-1 jYUAJe"
        type="button"
      >
        <span
          class="sc-bBABsx fsRcPl"
        >
          Get a new verification email
        </span>
      </button>
      <button
        class="sc-kgTSHT cNnZvt outer"
        type="button"
      >
        <span
          class="sc-bBABsx fsRcPl"
        >
          Logout
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Account /> should render correctly with initial state 2`] = `
<div>
  <div
    class="sc-bcXHqe dKDSeC page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="sc-ksBlkl iCvzgk"
    >
      <h1
        class="sc-gswNZR fEnHfq sc-kDvujY jlGjEY"
      >
        Account
      </h1>
    </div>
    <div
      class="accountstyles__ControlPanel-sc-b7dzct-2 bqtbAJ"
    >
      <button
        class="sc-kgTSHT kguxuY accountstyles__StyledButton-sc-b7dzct-1 jYUAJe"
        type="button"
      >
        <span
          class="sc-bBABsx fsRcPl"
        >
          Get a new verification email
        </span>
      </button>
      <button
        class="sc-kgTSHT cNnZvt outer"
        type="button"
      >
        <span
          class="sc-bBABsx fsRcPl"
        >
          Logout
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Account /> should render correctly with logOutError 1`] = `
<div>
  <div
    class="sc-bcXHqe dKDSeC page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="sc-ksBlkl iCvzgk"
    >
      <h1
        class="sc-gswNZR fEnHfq sc-kDvujY jlGjEY"
      >
        Account
      </h1>
    </div>
    <div
      class="accountstyles__ControlPanel-sc-b7dzct-2 bqtbAJ"
    >
      <button
        class="sc-kgTSHT kguxuY accountstyles__StyledButton-sc-b7dzct-1 jYUAJe"
        type="button"
      >
        <span
          class="sc-bBABsx fsRcPl"
        >
          Get a new verification email
        </span>
      </button>
      <button
        class="sc-kgTSHT cNnZvt outer"
        type="button"
      >
        <span
          class="sc-bBABsx fsRcPl"
        >
          Logout
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Account /> should render correctly with logOutResult 1`] = `
<div>
  <div
    class="sc-bcXHqe dKDSeC page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="sc-ksBlkl iCvzgk"
    >
      <h1
        class="sc-gswNZR fEnHfq sc-kDvujY jlGjEY"
      >
        Account
      </h1>
    </div>
    <div
      class="accountstyles__ControlPanel-sc-b7dzct-2 bqtbAJ"
    >
      <button
        class="sc-kgTSHT kguxuY accountstyles__StyledButton-sc-b7dzct-1 jYUAJe"
        type="button"
      >
        <span
          class="sc-bBABsx fsRcPl"
        >
          Get a new verification email
        </span>
      </button>
      <button
        class="sc-kgTSHT cNnZvt outer"
        type="button"
      >
        <span
          class="sc-bBABsx fsRcPl"
        >
          Logout
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Account /> should render correctly with loggingOut=true 1`] = `
<div>
  <div
    class="sc-bcXHqe dKDSeC page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="sc-ksBlkl iCvzgk"
    >
      <h1
        class="sc-gswNZR fEnHfq sc-kDvujY jlGjEY"
      >
        Account
      </h1>
    </div>
    <div
      class="accountstyles__ControlPanel-sc-b7dzct-2 bqtbAJ"
    >
      <button
        class="sc-kgTSHT kguxuY accountstyles__StyledButton-sc-b7dzct-1 jYUAJe"
        type="button"
      >
        <span
          class="sc-bBABsx fsRcPl"
        >
          Get a new verification email
        </span>
      </button>
      <button
        class="sc-kgTSHT fgzcvd outer"
        disabled=""
        type="button"
      >
        <span
          class="sc-bBABsx kGAFze"
        >
          Logout
        </span>
        <div
          aria-hidden="true"
          class="sc-iveFHk fcnnul"
        >
          <div
            class="sc-hHTYSt faOWmX"
          >
            <div
              class="sc-dmctIk cXBZJa"
            />
            <div
              class="sc-dmctIk geFBjy"
            />
            <div
              class="sc-dmctIk izRBrV"
            />
            <div
              class="sc-dmctIk jshiOg"
            />
            <div
              class="sc-dmctIk eXRsjf"
            />
            <div
              class="sc-dmctIk ktWufq"
            />
            <div
              class="sc-dmctIk dtOXNO"
            />
            <div
              class="sc-dmctIk cQoAua"
            />
          </div>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Account /> should render correctly with no user 1`] = `
<div>
  <div
    aria-label="Loading"
    class="sc-bcXHqe kEjsPc page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="sc-idXgbr irOVYZ"
    >
      <div
        class="sc-dIfARi hEqwgc"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-idXgbr jnOdul"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-dIfARi hEqwgc"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-idXgbr jnOdul"
    >
      <div
        class="sc-dIfARi hEqwgc"
        style="margin-left: -0px;"
      />
    </div>
  </div>
</div>
`;

exports[`<Account /> should render correctly with requestVerificationEmailError 1`] = `
<div>
  <div
    class="sc-bcXHqe dKDSeC page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="sc-ksBlkl iCvzgk"
    >
      <h1
        class="sc-gswNZR fEnHfq sc-kDvujY jlGjEY"
      >
        Account
      </h1>
    </div>
    <div
      class="accountstyles__ControlPanel-sc-b7dzct-2 bqtbAJ"
    >
      <button
        class="sc-kgTSHT kguxuY accountstyles__StyledButton-sc-b7dzct-1 jYUAJe"
        type="button"
      >
        <span
          class="sc-bBABsx fsRcPl"
        >
          Get a new verification email
        </span>
      </button>
      <button
        class="sc-kgTSHT cNnZvt outer"
        type="button"
      >
        <span
          class="sc-bBABsx fsRcPl"
        >
          Logout
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Account /> should render correctly with requestVerificationEmailResult 1`] = `
<div>
  <div
    class="sc-bcXHqe dKDSeC page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="sc-ksBlkl iCvzgk"
    >
      <h1
        class="sc-gswNZR fEnHfq sc-kDvujY jlGjEY"
      >
        Account
      </h1>
    </div>
    <div
      class="accountstyles__ControlPanel-sc-b7dzct-2 bqtbAJ"
    >
      <button
        class="sc-kgTSHT kguxuY accountstyles__StyledButton-sc-b7dzct-1 jYUAJe"
        type="button"
      >
        <span
          class="sc-bBABsx fsRcPl"
        >
          Get a new verification email
        </span>
      </button>
      <button
        class="sc-kgTSHT cNnZvt outer"
        type="button"
      >
        <span
          class="sc-bBABsx fsRcPl"
        >
          Logout
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Account /> should render correctly with requestingVerificationEmail=true 1`] = `
<div>
  <div
    class="sc-bcXHqe dKDSeC page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="sc-ksBlkl iCvzgk"
    >
      <h1
        class="sc-gswNZR fEnHfq sc-kDvujY jlGjEY"
      >
        Account
      </h1>
    </div>
    <div
      class="accountstyles__ControlPanel-sc-b7dzct-2 bqtbAJ"
    >
      <button
        class="sc-kgTSHT bNosaY accountstyles__StyledButton-sc-b7dzct-1 jYUAJe"
        disabled=""
        type="button"
      >
        <span
          class="sc-bBABsx kGAFze"
        >
          Get a new verification email
        </span>
        <div
          aria-hidden="true"
          class="sc-iveFHk fcnnul"
        >
          <div
            class="sc-hHTYSt faOWmX"
          >
            <div
              class="sc-dmctIk cXBZJa"
            />
            <div
              class="sc-dmctIk geFBjy"
            />
            <div
              class="sc-dmctIk izRBrV"
            />
            <div
              class="sc-dmctIk jshiOg"
            />
            <div
              class="sc-dmctIk eXRsjf"
            />
            <div
              class="sc-dmctIk ktWufq"
            />
            <div
              class="sc-dmctIk dtOXNO"
            />
            <div
              class="sc-dmctIk cQoAua"
            />
          </div>
        </div>
      </button>
      <button
        class="sc-kgTSHT cNnZvt outer"
        type="button"
      >
        <span
          class="sc-bBABsx fsRcPl"
        >
          Logout
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Account /> should render correctly with user with emailVerified=true 1`] = `
<div>
  <div
    class="sc-bcXHqe dKDSeC page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="sc-ksBlkl iCvzgk"
    >
      <h1
        class="sc-gswNZR fEnHfq sc-kDvujY jlGjEY"
      >
        Account
      </h1>
    </div>
    <div
      class="accountstyles__ControlPanel-sc-b7dzct-2 bqtbAJ"
    >
      <button
        class="sc-kgTSHT cNnZvt outer"
        type="button"
      >
        <span
          class="sc-bBABsx fsRcPl"
        >
          Logout
        </span>
      </button>
    </div>
  </div>
</div>
`;
